--- a/11_lesson_starter/index.html
+++ b/11_lesson_starter/index.html
@@ -10,7 +10,16 @@
 </head>
 
 <body>
+    <section>
+        <div class="block left">Float</div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor perspiciatis delectus totam natus aspernatur molestias consequuntur facere quae aperiam alias.</p>
+    </section>
     
+     <p>Cum, eveniet aperiam? Vel provident, suscipit non odit saepe est corrupti, neque similique, ea quo optio nostrum soluta veniam? Ipsam!</p>
+     <p>Distinctio debitis animi praesentium aliquam esse nam eveniet molestias ratione laboriosam laudantium natus dicta tempore, error inventore, illum dolor sapiente!</p>
+     <div class="block right">2nd</div>
+     <p>Optio magni accusamus fuga. Sint ea, ullam praesentium repellat porro dignissimos vitae eligendi eum, iure, ex quasi cupiditate similique quos?</p>
+     <p>Sapiente facilis in, ab aspernatur totam temporibus quasi error iste fugit, assumenda tempora neque? Voluptates voluptatibus optio magni in molestias?</p>
 </body>
 
 </html>
