--- a/12_lesson_starter/index.html
+++ b/12_lesson_starter/index.html
@@ -10,7 +10,18 @@
 </head>
 
 <body>
-    
+
+        <section class="columns">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit corrupti fugiat aliquid quaerat ab illo maiores dolore beatae placeat rem!</p>
+            <p>Id sunt corporis voluptatum repudiandae et quia soluta qui nam deserunt! Nesciunt excepturi veniam eos dolores eius debitis repellat culpa!</p>
+            <!-- <h2>Next Topic</h2> -->
+            <p class="quote">&#8220;Where's my rug, man ?&#8221; <span class="nowrap">&#8212;The Dude</span></p>
+            <p>Quibusdam, perspiciatis facilis! Eaque laborum iusto quia corrupti fuga officiis, beatae officia vitae ipsum ad cumque sit autem distinctio iste.</p>
+            <p>Dolorem blanditiis molestias accusantium consectetur temporibus totam porro, esse, nesciunt voluptatibus, sit minima. Ipsum distinctio tempore, voluptatum architecto optio earum.</p>
+        </section>
+    <p>Officiis dolore, nisi ea dicta corrupti exercitationem magni quis dolorem nam, porro nobis voluptatibus excepturi sit quae iusto. Ab, consequatur?</p>
+
+
 </body>
 
 </html>
