--- a/15_lesson_starter/index.html
+++ b/15_lesson_starter/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <header class="header el"><h1>Header</h1></header>
     <main class="container">
             <div class="box">1</div>
             <div class="box">2</div>
@@ -18,6 +19,8 @@
             <div class="box">5</div>
             <div class="box">6</div>
     </main>
+    <aside class="sidebar el"><h2>Sidebar</h2></aside>
+    <foote class="footer el"><h2>Footer</h2></foote>
 </body>
 
 </html>
