--- a/16_lesson_starter/index.html
+++ b/16_lesson_starter/index.html
@@ -10,7 +10,30 @@
 </head>
 
 <body>
-    
+    <!-- <section class="example">
+            <img src="img/pat1.png" alt="pattern 1" width="200" height="200">
+    </section> -->
+<!-- <div class="container">
+    <section class="hero">
+        <figure class="profile-pic-figure">
+            <img src="img/profile-800x800.png" alt="profile picture" title="My profile picture" width="800" height="800">
+            <figcaption class="offscreen">Jane Doe</figcaption>
+        </figure>
+        <h1 class="h1">
+            <span class="nowrap">Hello👋👋</span>
+            <span class="nowrap">I'm Jane</span>
+        </h1>
+    </section>
+</div> -->
+
+
+<section>
+    <p class="clip">Jane</p>
+</section>
+
+
+
+
 </body>
 
 </html>
