--- a/21_lesson_starter/index.html
+++ b/21_lesson_starter/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <main>
-        <section>
+        <!-- <section>
             <h2>My Heading</h2>
             <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quo aperiam porro, odio
                 mollitia suscipit eius
@@ -29,7 +29,13 @@
             <br>
             <a href="https://www.google.com/">Google</a>
         </section>
-        <!-- <div class="square">
+            <aside>
+                <h2>Aside</h2>
+                <p class="content">
+                    <span class="tooltip" data-tooltip="This is Latin">Lorem</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea assumenda mollitia quasi in dignissimos totam eum dolores sequi voluptates? Exercitationem hic recusandae dicta amet repellendus.
+                </p>
+            </aside> -->
+        <div class="square">
             <p>Hey</p>
         </div>
         <div class="square">💻</div>
@@ -42,7 +48,7 @@
         <div class="square">💻</div>
         <div class="square">💻</div>
         <div class="square">💻</div>
-        <div class="square">💻</div> -->
+        <div class="square">💻</div>
     </main>
 
     <footer>
