--- a/23_lesson_starter/index.html
+++ b/23_lesson_starter/index.html
@@ -11,9 +11,11 @@
 
 <body>
 
-    <button class="btn">🚀</button>
-    <button class="btn">🔥</button>
-    <button class="btn">🌮</button>
+    <header>
+        <button class="btn">🚀</button>
+        <button class="btn">🔥</button>
+        <button class="btn">🌮</button>
+    </header>
 
 </body>
 
